layout bugs corrected

--- a/src/components/Services/styles.css
+++ b/src/components/Services/styles.css
@@ -50,6 +50,10 @@
     font-size: 0.9rem;
 }
 
+.service__list .param {
+    max-width: 130px;
+}
+
 /* MEDIA QUERIAS (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
     .services__container {
